feat: add photos

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -147,6 +147,149 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "c5376547": {
+          "id": "c5376547",
+          "path": "images/Canada/bike-race.jpg",
+          "output": "images/Canada/bike-race.jpg",
+          "name": "bike-race.jpg",
+          "category": "IMAGE",
+          "size": 181769,
+          "type": "jpg",
+          "initialSize": 181769,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "64194c00": {
+          "id": "64194c00",
+          "path": "images/Canada/canal.jpg",
+          "output": "images/Canada/canal.jpg",
+          "name": "canal.jpg",
+          "category": "IMAGE",
+          "size": 113691,
+          "type": "jpg",
+          "initialSize": 113691,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "2a88e20f": {
+          "id": "2a88e20f",
+          "path": "images/Canada/native-americans.jpg",
+          "output": "images/Canada/native-americans.jpg",
+          "name": "native-americans.jpg",
+          "category": "IMAGE",
+          "size": 153473,
+          "type": "jpg",
+          "initialSize": 153473,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "43a9dfe1": {
+          "id": "43a9dfe1",
+          "path": "images/Canada/flowers.jpg",
+          "output": "images/Canada/flowers.jpg",
+          "name": "flowers.jpg",
+          "category": "IMAGE",
+          "size": 268735,
+          "type": "jpg",
+          "initialSize": 268735,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "75d37a39": {
+          "id": "75d37a39",
+          "path": "images/Poland/prarie.jpg",
+          "output": "images/Poland/prarie.jpg",
+          "name": "prarie.jpg",
+          "category": "IMAGE",
+          "size": 179149,
+          "type": "jpg",
+          "initialSize": 179149,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "eb8f4533": {
+          "id": "eb8f4533",
+          "path": "images/Poland/soldiers.jpg",
+          "output": "images/Poland/soldiers.jpg",
+          "name": "soldiers.jpg",
+          "category": "IMAGE",
+          "size": 79024,
+          "type": "jpg",
+          "initialSize": 79024,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "47733db0": {
+          "id": "47733db0",
+          "path": "images/USA/geese.jpg",
+          "output": "images/USA/geese.jpg",
+          "name": "geese.jpg",
+          "category": "IMAGE",
+          "size": 122231,
+          "type": "jpg",
+          "initialSize": 122231,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "14359d86": {
+          "id": "14359d86",
+          "path": "images/USA/horse.jpg",
+          "output": "images/USA/horse.jpg",
+          "name": "horse.jpg",
+          "category": "IMAGE",
+          "size": 76589,
+          "type": "jpg",
+          "initialSize": 76589,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "91acaae3": {
+          "id": "91acaae3",
+          "path": "images/Poland/white-horse.jpg",
+          "output": "images/Poland/white-horse.jpg",
+          "name": "white-horse.jpg",
+          "category": "IMAGE",
+          "size": 161772,
+          "type": "jpg",
+          "initialSize": 161772,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "eab33d65": {
+          "id": "eab33d65",
+          "path": "images/Poland/tavern.jpg",
+          "output": "images/Poland/tavern.jpg",
+          "name": "tavern.jpg",
+          "category": "IMAGE",
+          "size": 214791,
+          "type": "jpg",
+          "initialSize": 214791,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "fea95720": {
+          "id": "fea95720",
+          "path": "images/USA/shoe-and-cat.jpg",
+          "output": "images/USA/shoe-and-cat.jpg",
+          "name": "shoe-and-cat.jpg",
+          "category": "IMAGE",
+          "size": 98008,
+          "type": "jpg",
+          "initialSize": 98008,
+          "optimized": false,
+          "height": 576,
+          "width": 864
         }
       },
       "deploymentHistory": {},
