--- a/prepros.cfg
+++ b/prepros.cfg
@@ -185,19 +185,6 @@
           ],
           "type": "sass"
         },
-        "c5376547": {
-          "id": "c5376547",
-          "path": "images/canada/bike-race.jpg",
-          "output": "images/canada/bike-race.jpg",
-          "name": "bike-race.jpg",
-          "category": "IMAGE",
-          "size": 181769,
-          "type": "jpg",
-          "initialSize": 181769,
-          "optimized": false,
-          "height": 576,
-          "width": 864
-        },
         "64194c00": {
           "id": "64194c00",
           "path": "images/canada/canal.jpg",
@@ -324,6 +311,35 @@
           "size": 98008,
           "type": "jpg",
           "initialSize": 98008,
+          "optimized": false,
+          "height": 576,
+          "width": 864
+        },
+        "1c10d643": {
+          "id": "1c10d643",
+          "path": "css/_style.css",
+          "output": "css/_style-dist.css",
+          "name": "_style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "c5376547": {
+          "id": "c5376547",
+          "path": "images/canada/bike-race.jpg",
+          "output": "images/canada/bike-race.jpg",
+          "name": "bike-race.jpg",
+          "category": "IMAGE",
+          "size": 108108,
+          "type": "jpg",
+          "initialSize": 108108,
           "optimized": false,
           "height": 576,
           "width": 864
