feat(html): add custom photos

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -343,6 +343,19 @@
           "optimized": false,
           "height": 576,
           "width": 864
+        },
+        "02930fec": {
+          "id": "02930fec",
+          "path": "images/usa/coca-cola.jpg",
+          "output": "images/usa/coca-cola.jpg",
+          "name": "coca-cola.jpg",
+          "category": "IMAGE",
+          "size": 109401,
+          "type": "jpg",
+          "initialSize": 109401,
+          "optimized": false,
+          "height": 576,
+          "width": 864
         }
       },
       "deploymentHistory": {},
